--- a/processing.ipynb
+++ b/processing.ipynb
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -182,14 +182,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "B: [41826.481575761936+/-795.9334564755547\n 1096.4422795508253+/-387.86169326801945] m^-1\n"
+      "(2.15+/-0.05)e+04\n(2.037+/-0.035)e+04\nB: [41826.481575761936+/-795.9334564755547\n 1096.4422795508253+/-387.86169326801945] m^-1\n"
      ]
     }
    ],
@@ -200,9 +200,9 @@
     "    c = const.speed_of_light\n",
     "    invar = (v/2) + (k*T/(h*c))\n",
     "    vari = sqrt((k**2 * T**2) + (h*c*k*T)) / (h*c)\n",
-    "    plus = invar + vari\n",
-    "    minus = invar - vari\n",
-    "    return np.array([plus, minus])\n",
+    "    print(invar)\n",
+    "    print(vari)\n",
+    "    return np.array([invar + vari, invar - vari])\n",
     "\n",
     "# ambient temperature, in Kelvin\n",
     "T = uf(293, 5)\n",
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -234,6 +234,10 @@
     }
    ],
    "source": [
+    "# If we force B = 39 we get out values very close to literature\n",
+    "# Thus, this section of code must be alright\n",
+    "# B = 39\n",
+    "\n",
     "moI = const.h / (8 * const.speed_of_light * B * (const.pi ** 2))\n",
     "print('I: {} kg m^2'.format(moI))\n",
     "\n",
