Nicer display of ambient results

--- a/processing.ipynb
+++ b/processing.ipynb
@@ -151,7 +151,7 @@
   {
    "source": [
     "The function is rearanged for $B$ by expanding the RHS, plugging everything into the quadractic formula with $\\sqrt{B}$ as the variable, and squaring the resulting formula for $\\sqrt{B}$. This gives\n",
-    "$$B = \\frac{v}{2} + \\frac{kT}{hc} \\pm \\frac{\\sqrt{k^2 T^2 + hckT}}{hc} $$"
+    "$$B = \\frac{v}{2} + \\frac{kT}{hc} \\pm \\frac{\\sqrt{k^2 T^2 + hckTv}}{hc} $$"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -182,14 +182,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "(2.15+/-0.05)e+04\n(2.037+/-0.035)e+04\nB: [41826.481575761936+/-795.9334564755547\n 1096.4422795508253+/-387.86169326801945] m^-1\n"
+      "(2.16+/-0.05)e+04\n(2.16+/-0.05)e+04\nB: [43173.06664091285+/-1027.6153038866648\n 27.87113459435932+/-19.226467480885706] m^-1\n"
      ]
     }
    ],
@@ -199,13 +199,13 @@
     "    h = const.Planck\n",
     "    c = const.speed_of_light\n",
     "    invar = (v/2) + (k*T/(h*c))\n",
-    "    vari = sqrt((k**2 * T**2) + (h*c*k*T)) / (h*c)\n",
+    "    vari = sqrt((k**2 * T**2) + (h*c*k*T*v)) / (h*c)\n",
     "    print(invar)\n",
     "    print(vari)\n",
     "    return np.array([invar + vari, invar - vari])\n",
     "\n",
     "# ambient temperature, in Kelvin\n",
-    "T = uf(293, 5)\n",
+    "T = uf(295, 5)\n",
     "\n",
     "B = get_B(dv, T)\n",
     "print('B: {} m^-1'.format(B))"
@@ -222,14 +222,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "I: [6.692590624021466e-49+/-1.2735608130233354e-50\n 2.5530529390423326e-47+/-9.031313863102001e-48] kg m^2\nr: [3.549042209744893e-12+/-3.3768097706990004e-14\n 2.1920171332431124e-11+/-3.877082692034098e-12] m\n"
+      "I: [6.483846069078592e-49+/-1.5433000171260652e-50\n 1.004363555714032e-45+/-6.92844533384396e-46] kg m^2\nr: [3.4932557465600684e-12+/-4.1573640059117e-14\n 1.3748632612249596e-10+/-4.7421398818754836e-11] m\n"
      ]
     }
    ],
@@ -245,6 +245,34 @@
     "m_o = 15.999 * const.atomic_mass\n",
     "r = un.sqrt(moI/(2*m_o))\n",
     "print('r: {} m'.format(r))"
+   ]
+  },
+  {
+   "source": [
+    "Referencing the internet show that the bond length of CO2 is around 39 m^-1 (https://cccbdb.nist.gov/exprot2x.asp)\n",
+    "This means the second value in the arrays is the one we want."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Final results for ambient\nRotational constant, B: 28+/-19 m^-1\nMoment of Inertia, I: (1.0+/-0.7)e-45 kg m^2\nBond Length, r: (1.4+/-0.5)e-10 m\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Final results for ambient')\n",
+    "print('Rotational constant, B: {} m^-1'.format(B[1]))\n",
+    "print('Moment of Inertia, I: {} kg m^2'.format(moI[1]))\n",
+    "print('Bond Length, r: {} m'.format(r[1]))"
    ]
   }
  ]
