Remove excess graphs from ambient data

--- a/processing.ipynb
+++ b/processing.ipynb
@@ -69,12 +69,13 @@
     "    datasets[key] = data\n",
     "    log.info('Cleaned pandas object ' + key)\n",
     "\n",
-    "for key, data in datasets.items():\n",
-    "    fig, ax = plt.subplots()\n",
-    "    ax.plot(data['Wavelength (nm)'], data['Voltage (uV)'])\n",
-    "    ax.set_xlabel('Wavelength (nm)')\n",
-    "    ax.set_ylabel('Voltage ($\\mu$V)')\n",
-    "    ax.set_title(key)\n",
+    "key = 'Ambient high res 300diff 1025mm slit'\n",
+    "data = datasets[key]\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.plot(data['Wavelength (nm)'], data['Voltage (uV)'])\n",
+    "ax.set_xlabel('Wavelength (nm)')\n",
+    "ax.set_ylabel('Voltage ($\\mu$V)')\n",
+    "ax.set_title(key)\n",
     "\n",
     "# Needed to show plots in terminal environment.\n",
     "# plt.show()"
