--- a/processing.ipynb
+++ b/processing.ipynb
@@ -107,7 +107,7 @@
   {
    "source": [
     "The function is rearanged for $B$ by expanding the RHS, plugging everything into the quadractic formula with $\\sqrt{B}$ as the variable, and squaring the resulting formula for $\\sqrt{B}$. This gives\n",
-    "$$B = \\frac{v}{2} + \\frac{kT}{hc} \\pm \\frac{\\sqrt{k^2 T^2 + hckTv}}{hc} $$"
+    "$$B = \\frac{\\Delta v}{2} + \\frac{kT}{hc} \\pm \\frac{\\sqrt{k^2 T^2 + hckT\\Delta v}}{hc} $$"
    ],
    "cell_type": "markdown",
    "metadata": {}
